<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS496CollegePlanner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="SignIn">Sign in</string>
    <string name="HomePage_temp">You are on the home page</string>
    <string name="Calendar_button">Calendar</string>
    <string name="ViewSchedule">Current Class Schedule</string>
    <string name="settingsButton">Settings</string>
    <string name="accountButton">Account</string>
    <string name="ClassScheduleButton">Class Schedule</string>
    <string name="classPlanner">Class Planner</string>
    <string name="EditCourses">Edit Completed Courses</string>
    <string name="MyAccount">My Account</string>
    <string name="LogOut">Log Out</string>
    <string name="ChangeMajorBtn">Change Major</string>
    <string name="ChangeAdvisorBtn">Change Advisor</string>
    <string name="ManageClasseBtn">Manage Classes</string>
    <string name="Major">Major:</string>
    <string name="NotFound">Not Found</string>
    <string name="Back">Back</string>
    <string name="Current_Courses">Current Courses</string>
    <string name="Previous_Courses">Previous Courses</string>    
    <string name="Advisor">Advisor:</string> 
    <string name="AddCompletedCourses">Add Completed Courses</string>
    <string name="ManageCompletedCourses">Manage Completed Courses</string>
    <string name="Name">Name:</string>
    <string name="EditUsername">Edit Username</string>
    <string name="EditPassword">Edit Password</string>
    <string name="AdvisorContactInformaion">Advisor Contact Information:</string>
    <string name="EditName">Edit Name</string>
    <string name="viewNextSemester">View Suggested Course Sequence</string>
    <string name="EnterMaxCredits">Enter the maximum number of credits you would like to take next semester:</string>
    <string name="MaxDefault">18</string>
    <string name="GenerateCourses">Generate Courses</string>
    <string name="ViewCurrentClassSchedule">View Current Class Schedule</string>
    <string name="AddCourseToCurrentSchedule">Add a Course to Current Schedule</string>
    <string name="CurrentClassSchedule">Current Class Schedule</string>
    <string name="ViewCurrentCourses">View Current Courses</string>
    <string name="AddCurrentClass">Add Current Class</string>
    <string name="ClassName">Class Name:</string>
    <string name="ClassTime">Class Time:</string>
    <string name="ClassDays">Class Days:</string>
    <string name="AddClass">Add Class</string>
    <string name="ClassLocation">Class Location</string>
    
    


</resources>
