<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    android:fadingEdge="horizontal"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <Button
            android:id="@+id/SettingsBtn"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/greyBlue"
            android:text="@string/settingsButton" />

        <Button
            android:id="@+id/button_classSchedule"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/darkGreen"
            android:text="@string/ViewSchedule"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <Button
            android:id="@+id/button_myAccount"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/MyAccount" />

        <Button
            android:id="@+id/button_logOut"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/greyBlue"
            android:text="@string/LogOut" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_viewNextSemester"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkGreen"
            android:text="@string/viewNextSemester"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>