<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backButtonSchedulePg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkGreen"
            android:minHeight="@dimen/SignOutHeight"
            android:minWidth="@dimen/SignOutWidth"
            android:text="@string/Back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/spacerTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.24" />

        <Button
            android:id="@+id/signOutButtonSchedulePg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkGreen"
            android:minHeight="@dimen/SignOutHeight"
            android:minWidth="@dimen/SignOutWidth"
            android:text="@string/LogOut"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/CurrentClassScheduletxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/CurrentClassSchedule"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/addClassToSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddCourseToCurrentSchedule"
        android:textColor="@color/darkGreen" />

    <Button
        android:id="@+id/ViewCurrentCoursesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ViewCurrentCourses"
        android:textColor="@color/darkGreen" />

</LinearLayout>
