<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBlue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/backButtonCoursesPg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkGreen"
            android:minHeight="@dimen/SignOutHeight"
            android:minWidth="@dimen/SignOutWidth"
            android:text="@string/Back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/spacerTemp_Courses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.24" />

        <Button
            android:id="@+id/signOutButtonCoursesPg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/darkGreen"
            android:minHeight="@dimen/SignOutHeight"
            android:minWidth="@dimen/SignOutWidth"
            android:text="@string/LogOut"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/enterMaxCreditsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/EnterMaxCredits"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/maxCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="numberDecimal"
        android:text="@string/MaxDefault" >

        <requestFocus />
    </EditText>

   

    <Button
        android:id="@+id/GenerageCoursesBtn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/darkGreen"
        android:text="@string/GenerateCourses"
        android:textColor="@color/white"
        android:textColorHint="@color/darkGreen" />

</LinearLayout>