<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity" 
    android:background="@color/lightGreen">
     
    <TextView
        android:id="@+id/Password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Password"
        android:layout_below="@+id/editText_username"
        android:text="@string/Password"
        android:textColor="@color/darkGreen" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Username_text"
        android:ems="10"
        android:inputType="text|textPersonName" />

    <TextView
        android:id="@+id/Username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_username"
        android:layout_marginTop="44dp"
        android:text="@string/Username"
        android:textColor="@color/darkGreen" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_username"
        android:layout_below="@+id/Password_text"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Button_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_Password"
        android:layout_alignRight="@+id/editText_Password"
        android:layout_below="@+id/editText_Password"
        android:gravity="center"
        android:text="@string/SignIn"
        android:textColor="@color/white"
        android:background="@color/darkGreen"/>

</RelativeLayout>